
SUBDIRS = src

EXTRA_DIST = autogen.sh \
	testbench.sh \
	README.autotools \
	README.debian \
	Changelog \
	README \
	README.md \
	TRICKS \
	COPYING \
	README.1st

EXTRA_DIST += debian/source \
	debian/source/format \
	debian/changelog \
	debian/compat \
	debian/README.Debian \
	debian/README.source \
	debian/copyright \
	debian/control \
	debian/rules \
	debian/docs \
	debian/Makefile.am

